<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 Semyon Proshev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="tcity">TCity</string>

    <string name="projects">Projects</string>
    <string name="subprojects">Subprojects</string>
    <string name="build_configurations">Build configurations</string>
    <string name="builds">Builds</string>

    <string name="fav_projects">Favourite projects</string>
    <string name="fav_subprojects">Favourite subprojects</string>
    <string name="fav_build_configurations">Favourite build configurations</string>
    <string name="fav_builds">Favourite builds</string>

    <string name="current_builds">Current builds</string>

    <string-array name="main_drawerlist">
        <item>@string/projects</item>
        <item>@string/fav_build_configurations</item>
        <item>@string/current_builds</item>
        <item>@string/settings</item>
    </string-array>

    <string-array name="default_screens">
        <item>@string/projects</item>
        <item>@string/fav_build_configurations</item>
        <item>@string/current_builds</item>
    </string-array>

    <string name="options">Options</string>
    <string name="paused">paused</string>
    <string name="archived">archived</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="info">Info</string>
    <string name="artifacts">Artifacts</string>
    <string name="branch">Branch</string>
    <string name="wait_reason">Wait Reason</string>
    <string name="queued">Queued</string>
    <string name="started">Started</string>
    <string name="finished">Finished</string>
    <string name="agent">Agent</string>

    <string name="empty">Empty</string>
    <string name="loading">Loading</string>
    <string name="network_is_unavailable">Network is unavailable</string>

    <string name="share_link">Share link</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="settings">Settings</string>
    <string name="dl_artifacts">Download artifacts</string>
    <string name="dl_log">Download log</string>

    <string name="project_was_marked_as_favourite">Project was marked as favourite</string>
    <string name="project_is_not_marked_as_favourite">Project is not marked as favourite</string>

    <string name="build_configuration_was_marked_as_favourite">Build configuration was marked as favourite</string>
    <string name="build_configuration_is_not_marked_as_favourite">Build configuration is not marked as favourite</string>

    <string name="build_was_marked_as_favourite">Build was marked as favourite</string>
    <string name="build_is_not_marked_as_favourite">Build is not marked as favourite</string>

    <string name="dl_build_artifact">Download build artifact</string>

    <string name="url">Url</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="https">Https</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="server">Server</string>
    <string name="account">Account</string>
    <string name="logout_message">All application data will be removed. Do you want to continue?</string>
    <string name="synchronization">Synchronization</string>
    <string name="sync_pref_summary_off">Sync is disabled</string>
    <string name="sync_pref_summary_on">You will be notified about new builds in favourite build configurations</string>
    <string name="wifi_only">Wi-Fi only</string>
    <string name="sync_wifi_only_pref_summary_off">Sync will be running through all network connections</string>
    <string name="sync_wifi_only_pref_summary_on">Sync will be running through Wi-Fi connection only</string>
    <string name="interval">Interval</string>
    <string name="synchronization_interval">Synchronization interval</string>
    <string name="others">Others</string>
    <string name="archived_build_log">Archived build log</string>
    <string name="archived_build_log_pref_summary_off">Build log will be downloaded as a .log file</string>
    <string name="archived_build_log_pref_summary_on">Build log will be downloaded as a .zip file</string>
    <string name="default_screen">Default screen</string>
    <string name="about">About</string>
    <string name="github">GitHub</string>
    <string name="google_play">Google Play</string>

    <string name="server_pref_key">server</string>
    <string name="logout_pref_key">logout</string>
    <string name="sync_pref_key">sync</string>
    <string name="sync_wifi_only_pref_key">sync_wifi_only</string>
    <string name="sync_interval_pref_key">sync_interval</string>
    <string name="archived_build_log_pref_key">archived_build_log</string>
    <string name="default_screen_pref_key">default_screen</string>
    <string name="github_pref_key">github</string>
    <string name="google_play_pref_key">google_play</string>

    <string name="url_is_empty">Url is empty</string>
    <string name="login_is_empty">Login is empty</string>
    <string name="password_is_empty">Password is empty</string>
</resources>
