<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014 Semyon Proshev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/credentials">

        <Preference
            android:key="@string/url_pref_key"
            android:title="@string/url"
            />

        <Preference
            android:key="@string/login_pref_key"
            android:title="@string/login"
            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/synchronization">

        <CheckBoxPreference
            android:key="@string/sync_pref_key"

            android:summaryOff="@string/sync_pref_summary_off"
            android:summaryOn="@string/sync_pref_summary_on"

            android:title="@string/synchronization"
            />

        <CheckBoxPreference
            android:dependency="@string/sync_pref_key"
            android:key="@string/sync_wifi_only_pref_key"

            android:summaryOff="@string/sync_wifi_only_pref_summary_off"
            android:summaryOn="@string/sync_wifi_only_pref_summary_on"

            android:title="@string/wifi_only"
            />

    </PreferenceCategory>

</PreferenceScreen>