<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014 Semyon Proshev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/build_info_srlayout"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/build_info_tablelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:shrinkColumns="1"
                android:visibility="gone">

                <TableRow
                    android:id="@+id/build_info_result_row"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeight">

                    <TextView
                        android:id="@+id/build_info_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"/>

                </TableRow>

                <TableRow
                    android:id="@+id/build_info_branch_row"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeight">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/branch"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"/>

                    <TextView
                        android:id="@+id/build_info_branch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="8dp"
                        android:paddingRight="16dp"/>

                </TableRow>

                <TableRow
                    android:id="@+id/build_info_wait_reason_row"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeight">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wait_reason"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"/>

                    <TextView
                        android:id="@+id/build_info_wait_reason"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="8dp"
                        android:paddingRight="16dp"/>

                </TableRow>

                <TableRow
                    android:id="@+id/build_info_queued_row"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeight">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/queued"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"/>

                    <TextView
                        android:id="@+id/build_info_queued"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="8dp"
                        android:paddingRight="16dp"/>

                </TableRow>

                <TableRow
                    android:id="@+id/build_info_started_row"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeight">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/started"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"/>

                    <TextView
                        android:id="@+id/build_info_started"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="8dp"
                        android:paddingRight="16dp"/>

                </TableRow>

                <TableRow
                    android:id="@+id/build_info_finished_row"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeight">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finished"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"/>

                    <TextView
                        android:id="@+id/build_info_finished"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="8dp"
                        android:paddingRight="16dp"/>

                </TableRow>

                <TableRow
                    android:id="@+id/build_info_agent_row"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeight">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agent"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="16dp"
                        android:paddingRight="8dp"/>

                    <TextView
                        android:id="@+id/build_info_agent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:paddingLeft="8dp"
                        android:paddingRight="16dp"/>

                </TableRow>

            </TableLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/loading"/>

</FrameLayout>